[gd_scene load_steps=5 format=3 uid="uid://buum5pwddmn3c"]

[ext_resource type="Script" uid="uid://br3q8yt2ubo40" path="res://scripts/Screen/game.gd" id="1_liru2"]
[ext_resource type="Texture2D" uid="uid://dprr4rys8mtx7" path="res://assets/add_button.png" id="1_v061o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_liru2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qlno"]

[node name="Game" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(1320, 830)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_liru2")

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(1320, 830)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = 35.0
offset_right = -140.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_liru2")

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
mouse_filter = 2
theme_override_constants/separation = 39

[node name="Header" type="HBoxContainer" parent="Background/VBoxContainer"]
custom_minimum_size = Vector2(0, 51)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 659
alignment = 1

[node name="Label" type="Label" parent="Background/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "MY_GAMES"

[node name="AddGameButton" type="Button" parent="Background/VBoxContainer/Header"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"add_button"
text = "NEW_GAME"

[node name="TextureRect" type="TextureRect" parent="Background/VBoxContainer/Header/AddGameButton"]
layout_mode = 0
offset_left = -282.0
offset_top = -230.0
offset_right = 230.0
offset_bottom = 282.0
scale = Vector2(0.05, 0.05)
pivot_offset = Vector2(256, 256)
texture = ExtResource("1_v061o")

[node name="AddMenu" type="CenterContainer" parent="Background/VBoxContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="Background/VBoxContainer/AddMenu"]
custom_minimum_size = Vector2(681, 100)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5qlno")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/AddMenu/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 109

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 19
alignment = 1

[node name="Label" type="Label" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "GAME_NAME"

[node name="LineEdit" type="LineEdit" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="Label" type="Label" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "SAVE_MODE"

[node name="OptionButton" type="OptionButton" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Single"
popup/item_0/id = 0
popup/item_1/text = "Multiple"
popup/item_1/id = 1

[node name="MaxSaveSlotInput" type="HBoxContainer" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 19

[node name="Label" type="Label" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer/MaxSaveSlotInput"]
layout_mode = 2
text = "MAX_SAVE_SLOT"

[node name="SpinBox" type="SpinBox" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer/MaxSaveSlotInput"]
layout_mode = 2
max_value = 3.0
value = 3.0

[node name="Control" type="Control" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer"]
custom_minimum_size = Vector2(98, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="submitButton" type="Button" parent="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -15.5
offset_right = 49.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme_type_variation = &"base_button"
text = "NEW_GAME"

[node name="ErrorLabel" type="Label" parent="Background/VBoxContainer/AddMenu/Panel"]
layout_mode = 0
offset_left = 231.0
offset_top = 95.0
offset_right = 443.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(0.58316284, 0.23078474, 0.18226054, 1)
horizontal_alignment = 1

[node name="Table" type="MarginContainer" parent="Background/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[connection signal="pressed" from="Background/VBoxContainer/Header/AddGameButton" to="." method="_on_add_game_button_pressed"]
[connection signal="item_selected" from="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Background/VBoxContainer/AddMenu/Panel/HBoxContainer/Control/submitButton" to="." method="_on_submit_button_pressed"]
